[package]
name = "cpython_deepdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpython = "0.7.1"
serde_json = {version = "1.0.45", features=["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.18.2", features = ["auto-initialize"]}
